# nidaq-plugin

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  create_build_files.bat  create_build_files.sh  et q  travis.sh  travis_build.sh
.github/workflows/: windows.yml
.travis/: bintray_deploy.sh  travis.sh  travis_build.sh
Builds/: CMakeLists.txt  build.bat  create_build_files.sh  travis_build.sh
Builds/VS2013/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NI-DAQmx.vcxproj  NI-DAQmx.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  create_build_files.bat  create_build_files.sh  install_manifest.txt  ni-daq.sln
Source/: NIDAQComponents.cpp  NIDAQComponents.h  NIDAQEditor.cpp  NIDAQEditor.h  NIDAQThread.cpp  NIDAQThread.h  NI_DAQmx.cpp  NI_DAQmx.h  OpenEphysLib.cpp  ProcessorPlugin.cpp  ProcessorPlugin.h
Source/nidaq-api/: NIDAQmx.h
